@@ -4,6 +4,7 @@
 	- sync python bindings with rpm4.
 	- add rpmGetRpmlibProvides() to retrieve rpmlib(...) provides
 		"Pawel A. Gajda" <mis@k2.net.pl>.
+	- fix: duplicate headerFree() on instalBinaryPackage error return.
 
 3.0.5 -> 3.0.6
 	- python bindings to query and verify signatures.
